[package]
name = "sell_token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sell_token2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-cp-swap/devnet"]


[dependencies]
anchor-lang = "0.31.0"
anchor-spl  = "0.31.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi", branch = "anchor-0.31.0" }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "no-entrypoint",
    "cpi",
] }